--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ Owlready2==0.37
 nltk==3.7
 numba==0.55.2
 spacy==3.3.1
-en-core-web-lg @ file:./en_core_web_lg-3.3.0-py3-none-any.whl
+en-core-web-md @ file:./en_core_web_md-3.3.0-py3-none-any.whl
+scikit-learn==1.1.1
